@@ -12,6 +12,10 @@
 
 #endif /* BEGIN_C_DECLS */
 
+#if defined (USE_PYTHON)
+#include "Python.h" 
+#endif 
+
 BEGIN_C_DECLS
 
 // Bernhard turns these off for now.
@@ -28,5 +32,6 @@ void c_inner_main(void *closure, int argc, char** argv);
 void c_wrapper_scm_boot_guile(int argc, char** argv); 
 char* does_file_exist (const char     *directory,
 		       const char     *filename); 
+void start_command_line_python_maybe(char **argv);
 
 END_C_DECLS
