@@ -159,6 +159,7 @@ void setup_symm_lib();
 void setup_rgb_reps();
 void check_reference_structures_dir();
 void create_rot_trans_menutoolbutton_menu(GtkWidget *window1);
+void start_command_line_python_maybe(char **argv);
 #ifdef USE_MYSQL_DATABASE
 #include "mysql/mysql.h"
 int setup_database();
@@ -600,33 +601,8 @@ main (int argc, char *argv[]) {
      run_command_line_scripts();
      if (graphics_info_t::use_graphics_interface_flag)
 	gtk_main ();
-
-#if PY_MAJOR_VERSION > 2 
-     else
-	Py_Main(0, argv);
-#else
-#if PY_MINOR_VERSION > 2 
-     else
-	Py_Main(0, argv);
-#endif     // PY_MINOR_VERSION
-#endif     // PY_MAJOR_VERSION
-
-     //  Skip initialization registration of signal handlers, useful
-     //  when Python is embedded. Version 2.4 or later. Thanks Stuart
-     //  McNicholas for letting me know about this.
-     //
-     // Question: Do we need to check that we are not using command
-     // line python no graphics before we use this?
-     // 
-#if PY_MAJOR_VERSION > 2
-     Py_InitializeEx(0);
-#endif     
-#if PY_MAJOR_VERSION == 2
-#if PY_MINOR_VERSION > 3
-     Py_InitializeEx(0);
-#endif     
-#endif     
-
+     else 
+	start_command_line_python_maybe(argv);
 
 #else
      // not python or guile
